--- a/css/now-ui-kit.css
+++ b/css/now-ui-kit.css
@@ -85,12 +85,17 @@
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-brown,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-brown {
   color: #fff;
-  background: #f96332; }
+  background: #c5b415; }
 
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-blue,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-blue {
   color: #fff;
   background: #2CA8FF; }
+
+.bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-purple,
+.bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-purple {
+  color: #fff;
+  background: #521f94; }
 
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-green,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-green {
@@ -232,14 +237,19 @@
   background-color: #18ce0f; }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-brown ~ .bootstrap-switch-default {
-  background-color: #f96332; }
+  background-color: #c5b415; }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-blue ~ .bootstrap-switch-default {
   background-color: #2CA8FF; }
 
+.bootstrap-switch.bootstrap-switch-on .bootstrap-switch-purple ~ .bootstrap-switch-default {
+  background-color: #521f94; }
+  
+
 .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-red,
 .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-brown,
 .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-blue,
+.bootstrap-switch.bootstrap-switch-off .bootstrap-switch-purple,
 .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-orange,
 .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-green {
   background-color: #E3E3E3; }
@@ -498,11 +508,11 @@
 .slider.slider-neutral .noUi-handle {
   background-color: #FFFFFF; }
 .slider.slider-primary .noUi-connect, .slider.slider-primary.noUi-connect {
-  background-color: #f96332; }
+  background-color: #c5b415; }
 .slider.slider-primary.noUi-target {
   background-color: rgba(249, 99, 50, 0.3); }
 .slider.slider-primary .noUi-handle {
-  background-color: #f96332; }
+  background-color: #c5b415; }
 .slider.slider-info .noUi-connect, .slider.slider-info.noUi-connect {
   background-color: #2CA8FF; }
 .slider.slider-info.noUi-target {
@@ -554,15 +564,15 @@
   .datepicker.dropdown-menu:before {
     display: none; }
   .datepicker.datepicker-primary {
-    background-color: #f96332; }
+    background-color: #c5b415; }
     .datepicker.datepicker-primary th,
     .datepicker.datepicker-primary .day div,
     .datepicker.datepicker-primary table tr td span {
       color: #FFFFFF; }
     .datepicker.datepicker-primary:after {
-      border-bottom-color: #f96332; }
+      border-bottom-color: #c5b415; }
     .datepicker.datepicker-primary.datepicker-orient-top:after {
-      border-top-color: #f96332; }
+      border-top-color: #c5b415; }
     .datepicker.datepicker-primary .dow {
       color: rgba(255, 255, 255, 0.8); }
     .datepicker.datepicker-primary table tr td.old div,
@@ -583,7 +593,7 @@
     .datepicker.datepicker-primary table tr td.active.disabled div,
     .datepicker.datepicker-primary table tr td.active.disabled:hover div {
       background-color: #FFFFFF;
-      color: #f96332; }
+      color: #c5b415; }
     .datepicker.datepicker-primary table tr td.day:hover div,
     .datepicker.datepicker-primary table tr td.day.focused div {
       background: rgba(255, 255, 255, 0.2); }
@@ -648,7 +658,7 @@
     .datepicker.datepicker-primary table tr td span.active:hover[disabled],
     .datepicker.datepicker-primary table tr td span.active.disabled[disabled],
     .datepicker.datepicker-primary table tr td span.active.disabled:hover[disabled] {
-      color: #f96332; }
+      color: #c5b415; }
 
 .datepicker-inline {
   width: 220px; }
@@ -745,7 +755,7 @@
   cursor: pointer; }
 
 .datepicker th {
-  color: #f96332; }
+  color: #c5b415; }
 
 .table-condensed > tbody > tr > td,
 .table-condensed > tbody > tr > th,
@@ -952,7 +962,7 @@
 .datepicker table tr td.active:hover div,
 .datepicker table tr td.active.disabled div,
 .datepicker table tr td.active.disabled:hover div {
-  background-color: #f96332;
+  background-color: #c5b415;
   color: #FFFFFF;
   box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2); }
 
@@ -976,7 +986,7 @@
 .datepicker table tr td.active:hover[disabled] div,
 .datepicker table tr td.active.disabled[disabled] div,
 .datepicker table tr td.active.disabled:hover[disabled] div {
-  background-color: #f96332; }
+  background-color: #c5b415; }
 
 .datepicker table tr td.active:active,
 .datepicker table tr td.active:hover:active,
@@ -1016,7 +1026,7 @@
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
   color: #fff;
-  background-color: #f96332; }
+  background-color: #c5b415; }
 
 .datepicker table tr td span.active:hover,
 .datepicker table tr td span.active:hover:hover,
@@ -1038,7 +1048,7 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #f96332;
+  background-color: #c5b415;
   box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2); }
 
 .datepicker table tr td span.active:active,
@@ -1249,30 +1259,30 @@
     top: 1px; }
 
 .btn-primary {
-  background-color: #f96332;
+  background-color: #f93232;
   color: #FFFFFF; }
   .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary:active:focus, .btn-primary:active:hover, .btn-primary.active:focus, .btn-primary.active:hover, .show > .btn-primary.dropdown-toggle, .show > .btn-primary.dropdown-toggle:focus, .show > .btn-primary.dropdown-toggle:hover {
-    background-color: #fa7a50;
+    background-color: #c5b415;
     color: #FFFFFF;
     box-shadow: none; }
   .btn-primary:hover {
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.17); }
   .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary:disabled, .btn-primary:disabled:hover, .btn-primary:disabled:focus, .btn-primary:disabled.focus, .btn-primary:disabled:active, .btn-primary:disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
-    background-color: #f96332;
-    border-color: #f96332; }
+    background-color: #c5b415;
+    border-color: #c5b415; }
   .btn-primary.btn-simple {
-    color: #f96332;
-    border-color: #f96332; }
+    color: #c5b415;
+    border-color: #c5b415; }
     .btn-primary.btn-simple:hover, .btn-primary.btn-simple:focus, .btn-primary.btn-simple:active {
       background-color: transparent;
-      color: #fa7a50;
-      border-color: #fa7a50;
+      color: #c5b415;
+      border-color: #c5b415;
       box-shadow: none; }
   .btn-primary.btn-link {
-    color: #f96332; }
+    color: #c5b415; }
     .btn-primary.btn-link:hover, .btn-primary.btn-link:focus, .btn-primary.btn-link:active {
       background-color: transparent;
-      color: #fa7a50;
+      color: #c5b415;
       text-decoration: none;
       box-shadow: none; }
 
@@ -1390,7 +1400,7 @@
 
 .btn-neutral {
   background-color: #FFFFFF;
-  color: #f96332; }
+  color: #c5b415; }
   .btn-neutral:hover, .btn-neutral:focus, .btn-neutral:active, .btn-neutral.active, .btn-neutral:active:focus, .btn-neutral:active:hover, .btn-neutral.active:focus, .btn-neutral.active:hover, .show > .btn-neutral.dropdown-toggle, .show > .btn-neutral.dropdown-toggle:focus, .show > .btn-neutral.dropdown-toggle:hover {
     background-color: #FFFFFF;
     color: #FFFFFF;
@@ -1422,10 +1432,10 @@
       color: #979797; }
   .btn-neutral.active, .btn-neutral:active, .btn-neutral:active:focus, .btn-neutral:active:hover, .btn-neutral.active:focus, .btn-neutral.active:hover, .show > .btn-neutral.dropdown-toggle, .show > .btn-neutral.dropdown-toggle:focus, .show > .btn-neutral.dropdown-toggle:hover {
     background-color: #FFFFFF;
-    color: #fa7a50;
+    color: #c5b415;
     box-shadow: none; }
   .btn-neutral:hover, .btn-neutral:focus {
-    color: #fa7a50; }
+    color: #c5b415; }
     .btn-neutral:hover:not(.nav-link), .btn-neutral:focus:not(.nav-link) {
       box-shadow: none; }
   .btn-neutral.btn-simple {
@@ -1559,13 +1569,13 @@ fieldset[disabled] .btn-link.active {
   .has-success .form-control {
     border-color: #E3E3E3; }
   .form-control:focus {
-    border: 1px solid #f96332;
+    border: 1px solid #c5b415;
     -webkit-box-shadow: none;
     box-shadow: none;
     outline: 0 !important;
     color: #2c2c2c; }
     .form-control:focus + .input-group-addon, .form-control:focus ~ .input-group-addon {
-      border: 1px solid #f96332;
+      border: 1px solid #c5b415;
       border-left: none;
       background-color: transparent; }
   .has-success .form-control, .has-error .form-control, .has-success .form-control:focus, .has-error .form-control:focus {
@@ -1718,7 +1728,7 @@ fieldset[disabled] .btn-link.active {
 
 .input-group-focus .input-group-addon {
   background-color: #FFFFFF;
-  border-color: #f96332; }
+  border-color: #c5b415; }
 .input-group-focus.form-group-no-border .input-group-addon {
   background-color: rgba(222, 222, 222, 0.5); }
 
@@ -1966,10 +1976,10 @@ textarea.form-control {
   .progress-container.progress-primary .progress {
     background: rgba(249, 99, 50, 0.3); }
   .progress-container.progress-primary .progress-bar {
-    background: #f96332; }
+    background: #c5b415; }
   .progress-container.progress-primary .progress-value,
   .progress-container.progress-primary .progress-badge {
-    color: #f96332; }
+    color: #c5b415; }
   .progress-container.progress-info .progress {
     background: rgba(44, 168, 255, 0.3); }
   .progress-container.progress-info .progress-bar {
@@ -2021,8 +2031,8 @@ textarea.form-control {
   color: #888; }
 
 .badge-primary {
-  border-color: #f96332;
-  color: #f96332; }
+  border-color: #c5b415;
+  color: #c5b415; }
 
 .badge-info {
   border-color: #2CA8FF;
@@ -2088,8 +2098,8 @@ textarea.form-control {
   background-color: #18ce0f;
   border-color: #18ce0f; }
 .pagination.pagination-primary .page-item.active > .page-link, .pagination.pagination-primary .page-item.active > .page-link:focus, .pagination.pagination-primary .page-item.active > .page-link:hover {
-  background-color: #f96332;
-  border-color: #f96332; }
+  background-color: #c5b415;
+  border-color: #c5b415; }
 .pagination.pagination-warning .page-item.active > .page-link, .pagination.pagination-warning .page-item.active > .page-link:focus, .pagination.pagination-warning .page-item.active > .page-link:hover {
   background-color: #FFB236;
   border-color: #FFB236; }
@@ -2104,7 +2114,7 @@ textarea.form-control {
 .pagination.pagination-neutral .page-item.active > .page-link, .pagination.pagination-neutral .page-item.active > .page-link:focus, .pagination.pagination-neutral .page-item.active > .page-link:hover {
   background-color: #FFFFFF;
   border-color: #FFFFFF;
-  color: #f96332; }
+  color: #c5b415; }
 
 button,
 input,
@@ -2120,9 +2130,9 @@ small {
   font-size: 60%; }
 
 a {
-  color: #f96332; }
+  color: #c5b415; }
   a:hover, a:focus {
-    color: #f96332; }
+    color: #c5b415; }
 
 h1, .h1 {
   font-size: 3.5em;
@@ -2187,7 +2197,7 @@ p {
   color: #9A9A9A; }
 
 .text-primary {
-  color: #f96332 !important; }
+  color: #c5b415 !important; }
 
 .text-info {
   color: #2CA8FF !important; }
@@ -2215,10 +2225,10 @@ p {
     font-size: 0.8571em;
     text-transform: uppercase; }
   .blockquote.blockquote-primary {
-    border-color: #f96332;
-    color: #f96332; }
+    border-color: #c5b415;
+    color: #c5b415; }
     .blockquote.blockquote-primary small {
-      color: #f96332; }
+      color: #c5b415; }
   .blockquote.blockquote-danger {
     border-color: #FF3636;
     color: #FF3636; }
@@ -2294,7 +2304,7 @@ body {
   background-color: #888;
   margin: 20px auto; }
   .separator.separator-primary {
-    background-color: #f96332; }
+    background-color: #c5b415; }
 
 .nav-pills .nav-item .nav-link {
   padding: 0 15.5px;
@@ -2323,9 +2333,9 @@ body {
   color: #FFFFFF; }
   .nav-pills.nav-pills-neutral .nav-item .nav-link.active, .nav-pills.nav-pills-neutral .nav-item .nav-link.active:focus, .nav-pills.nav-pills-neutral .nav-item .nav-link.active:hover {
     background-color: #FFFFFF;
-    color: #f96332; }
+    color: #c5b415; }
 .nav-pills.nav-pills-primary .nav-item .nav-link.active, .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus, .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-  background-color: #f96332; }
+  background-color: #c5b415; }
 .nav-pills.nav-pills-info .nav-item .nav-link.active, .nav-pills.nav-pills-info .nav-item .nav-link.active:focus, .nav-pills.nav-pills-info .nav-item .nav-link.active:hover {
   background-color: #2CA8FF; }
 .nav-pills.nav-pills-success .nav-item .nav-link.active, .nav-pills.nav-pills-success .nav-item .nav-link.active:focus, .nav-pills.nav-pills-success .nav-item .nav-link.active:hover {
@@ -2394,8 +2404,8 @@ body {
       border-color: rgba(255, 255, 255, 0.5);
       color: #FFFFFF; }
   .nav-tabs.nav-tabs-primary > .nav-item > .nav-link.active {
-    border-color: #f96332;
-    color: #f96332; }
+    border-color: #c5b415;
+    color: #c5b415; }
   .nav-tabs.nav-tabs-info > .nav-item > .nav-link.active {
     border-color: #2CA8FF;
     color: #2CA8FF; }
@@ -2516,7 +2526,7 @@ body {
   background-color: #888 !important; }
 
 .bg-primary {
-  background-color: #f96332 !important; }
+  background-color: #c5b415 !important; }
 
 .bg-info {
   background-color: #2CA8FF !important; }
@@ -2716,6 +2726,12 @@ img {
 .img-raised {
   box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); }
 
+.img-raised-fixed {
+  box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3); 
+  margin-top: 3px;
+}
+  
+
 .popover {
   font-size: 14px;
   box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.2);
@@ -2742,17 +2758,17 @@ img {
     border-bottom-color: #FFFFFF;
     top: -9px; }
   .popover.popover-primary {
-    background-color: #f96332; }
+    background-color: #c5b415; }
     .popover.popover-primary .popover-body {
       color: #FFFFFF; }
     .popover.popover-primary.bs-popover-right .arrow:after {
-      border-right-color: #f96332; }
+      border-right-color: #c5b415; }
     .popover.popover-primary.bs-popover-top .arrow:after {
-      border-top-color: #f96332; }
+      border-top-color: #c5b415; }
     .popover.popover-primary.bs-popover-bottom .arrow:after {
-      border-bottom-color: #f96332; }
+      border-bottom-color: #c5b415; }
     .popover.popover-primary.bs-popover-left .arrow:after {
-      border-left-color: #f96332; }
+      border-left-color: #c5b415; }
     .popover.popover-primary .popover-header {
       color: #FFFFFF;
       opacity: .6; }
@@ -3294,12 +3310,12 @@ Created using IcoMoon - icomoon.io
   line-height: 5.9;
   box-shadow: 0px 5px 50px 0px rgba(0, 0, 0, 0.3); }
   .modal.modal-mini .modal-profile i {
-    color: #f96332;
+    color: #c5b415;
     font-size: 21px; }
   .modal.modal-mini .modal-profile[class*="modal-profile-"] i {
     color: #FFFFFF; }
   .modal.modal-mini .modal-profile.modal-profile-primary {
-    background-color: #f96332; }
+    background-color: #c5b415; }
   .modal.modal-mini .modal-profile.modal-profile-danger {
     background-color: #FF3636; }
   .modal.modal-mini .modal-profile.modal-profile-warning {
@@ -3318,7 +3334,7 @@ Created using IcoMoon - icomoon.io
 .modal.modal-default .modal-header .close {
   color: #2c2c2c; }
 .modal.modal-primary .modal-content {
-  background-color: #f96332;
+  background-color: #c5b415;
   color: #FFFFFF; }
 .modal.modal-primary .modal-header .close {
   color: #FFFFFF; }
@@ -3374,7 +3390,7 @@ Created using IcoMoon - icomoon.io
   .card .card-body {
     min-height: 190px; }
   .card[data-background-color="orange"] {
-    background-color: #f96332; }
+    background-color: #c5b415; }
   .card[data-background-color="red"] {
     background-color: #FF3636; }
   .card[data-background-color="yellow"] {
@@ -3383,7 +3399,9 @@ Created using IcoMoon - icomoon.io
     background-color: #2CA8FF; }
   .card[data-background-color="green"] {
     background-color: #18ce0f; }
-
+  .card[data-background-color="purple"] {
+    background-color: #521f94; }
+ 
 .card-signup {
   max-width: 350px;
   margin: 0 auto; }
@@ -3482,7 +3500,9 @@ Created using IcoMoon - icomoon.io
   .landing-page .header .title {
     color: #FFFFFF; }
 .landing-page .section-team .team .team-player img {
-  max-width: 100px; }
+  width: 100px;
+  height: 100px; }
+  /* max-width: 100px; } */
 .landing-page .section-team .team-player {
   margin-bottom: 15px; }
 .landing-page .section-contact-us .title {
@@ -3732,8 +3752,8 @@ Created using IcoMoon - icomoon.io
   .page-header .description {
     color: rgba(255, 255, 255, 0.5); }
   .page-header.page-header-small {
-    height: 50vh;
-    max-height: 440px; }
+    height: 70vh;
+    max-height: 550px; }
   .page-header:after, .page-header:before {
     position: absolute;
     z-index: 0;
@@ -3831,7 +3851,7 @@ Created using IcoMoon - icomoon.io
   top: 36%;
   left: 44%;
   font-size: 65px;
-  color: #f96332;
+  color: #c5b415;
   padding: 1px; }
 .section-nucleo-icons .icons-container i:nth-child(7) {
   top: 59%;
@@ -4032,15 +4052,15 @@ Created using IcoMoon - icomoon.io
     -ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1); }
     .sidebar-collapse .navbar-collapse:before {
-      background: #f96332;
+      background: #c5b415;
       /* For browsers that do not support gradients */
-      background: -webkit-linear-gradient(#f96332 0%, #000 80%);
+      background: -webkit-linear-gradient(#c5b415 0%, #000 80%);
       /* For Safari 5.1 to 6.0 */
-      background: -o-linear-gradient(#f96332 0%, #000 80%);
+      background: -o-linear-gradient(#c5b415 0%, #000 80%);
       /* For Opera 11.1 to 12.0 */
-      background: -moz-linear-gradient(#f96332 0%, #000 80%);
+      background: -moz-linear-gradient(#c5b415 0%, #000 80%);
       /* For Firefox 3.6 to 15 */
-      background: linear-gradient(#f96332 0%, #000 80%);
+      background: linear-gradient(#c5b415 0%, #000 80%);
       /* Standard syntax (must be last) */
       opacity: 0.76;
       filter: alpha(opacity=76);
@@ -4704,15 +4724,15 @@ Created using IcoMoon - icomoon.io
     -ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1); }
     .burger-menu .navbar-collapse:before {
-      background: #f96332;
+      background: #c5b415;
       /* For browsers that do not support gradients */
-      background: -webkit-linear-gradient(#f96332 0%, #000 80%);
+      background: -webkit-linear-gradient(#c5b415 0%, #000 80%);
       /* For Safari 5.1 to 6.0 */
-      background: -o-linear-gradient(#f96332 0%, #000 80%);
+      background: -o-linear-gradient(#c5b415 0%, #000 80%);
       /* For Opera 11.1 to 12.0 */
-      background: -moz-linear-gradient(#f96332 0%, #000 80%);
+      background: -moz-linear-gradient(#c5b415 0%, #000 80%);
       /* For Firefox 3.6 to 15 */
-      background: linear-gradient(#f96332 0%, #000 80%);
+      background: linear-gradient(#c5b415 0%, #000 80%);
       /* Standard syntax (must be last) */
       opacity: 0.76;
       filter: alpha(opacity=76);
