--- a/css/sbst.css
+++ b/css/sbst.css
@@ -41,6 +41,10 @@
     text-align: left;
 }
 
+.profile-picture {
+    object-fit: cover;
+}
+
 .committee-table {
     align-self: center;
     text-align: left;
