Added links to the tools

--- a/css/sbst.css
+++ b/css/sbst.css
@@ -18,7 +18,7 @@
 .paper-authors-accepted {
     display:inline;
     font-size:90%;
-    color: #3e2999;/*color: #f96332;*/
+    color: #008c9e;/*color: #f96332;*/
     min-height: 8px;
     text-align: left;
 }
