--- a/css/schedule.css
+++ b/css/schedule.css
@@ -20,6 +20,7 @@
 .schedule .session {
     text-align: left;
     width: auto;
-    color: #008c9e;
+    color: #6a4ee7;
     padding-left: 5px;
+    font-weight: bold;
 }
