--- a/css/schedule.css
+++ b/css/schedule.css
@@ -13,8 +13,10 @@
 
 .schedule .time {
     text-align: right;
-    width: auto;
+    width: 4cm;
     padding-right: 5px;
+    vertical-align: top;
+    font-weight: bold;
 }
 
 .schedule .session {
@@ -23,4 +25,17 @@
     color: #6a4ee7;
     padding-left: 5px;
     font-weight: bold;
+}
+
+.schedule .sub-session {
+    text-align: left;
+    width: auto;
+    padding-left: 5px;
+}
+
+.schedule .sub-time {
+    text-align: right;
+    width: 4cm;
+    padding-right: 5px;
+    vertical-align: top;
 }
