--- a/css/sbst.css
+++ b/css/sbst.css
@@ -63,6 +63,16 @@
     color: #FFFFFF;
 }
 
+.btn-youtube {
+    float: left;
+}
+
+.btn-youtube:hover {
+    color: #fff;
+    background-color: #c5b415;
+    border-color: #c5b415
+}
+
 .bg-primary {
     background-color: #6a4ee7 !important;
     opacity: 0.76;
@@ -86,6 +96,7 @@
     color: #3e2999 !important;
 }
 
+
 a {
     color: #3e2999;
 }
@@ -96,8 +107,9 @@ a {
 }
 
 .subtitle {
+    text-align: center;
     font-weight: 500 !important;
-    font-size: 2.5em !important;
+    font-size: 2.0em !important;
 }
 
 .subsection {
@@ -111,3 +123,25 @@ a {
     margin-bottom: 15px;
     font-weight: 400 !important;
 }
+
+.iframe-container{
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .iframe-container iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .slides-title {
+    font-size: 20px;
+  }
+
+  .slides-title-home {
+    font-size: 16px;
+  }
